# voicesinterleave

./: Hello.py  README.md  pyproject.toml
output/alignments/kuijken/: alignment_1.csv  alignment_10.csv  alignment_11.csv  alignment_12.csv  alignment_2.csv  alignment_3.csv  alignment_4.csv  alignment_5.csv  alignment_6.csv  alignment_7.csv  alignment_8.csv  alignment_9.csv
output/alignments/lazarevitch/: alignment_1.csv  alignment_10.csv  alignment_11.csv  alignment_12.csv  alignment_2.csv  alignment_3.csv  alignment_4.csv  alignment_5.csv  alignment_6.csv  alignment_7.csv  alignment_8.csv  alignment_9.csv
output/alignments/pahud/: alignment_1.csv  alignment_10.csv  alignment_11.csv  alignment_12.csv  alignment_2.csv  alignment_3.csv  alignment_4.csv  alignment_5.csv  alignment_6.csv  alignment_7.csv  alignment_8.csv  alignment_9.csv
output/alignments/pitelina/: alignment_1.csv  alignment_10.csv  alignment_11.csv  alignment_12.csv  alignment_2.csv  alignment_3.csv  alignment_4.csv  alignment_5.csv  alignment_6.csv  alignment_7.csv  alignment_8.csv  alignment_9.csv
output/alignments/porter/: alignment_1.csv  alignment_10.csv  alignment_11.csv  alignment_12.csv  alignment_2.csv  alignment_3.csv  alignment_4.csv  alignment_5.csv  alignment_6.csv  alignment_7.csv  alignment_8.csv  alignment_9.csv
output/alignments/rampal/: alignment_1.csv  alignment_10.csv  (+10 more)
pages/: 1_🎼Measures by performer.py  2_🕺🏼Movements by performer.py  3_🎶Fugatos by performer.py  4_🪈Corpus by performer.py  5_🎙️Performers comparison.py
src/: data.py  durations_analyse_tools.py  stats.py
